test: try test framework